# demons

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_AUDIT.md  RELEASING.md  SPEC.md  test-demons.toml  test_commands.sh
.github/workflows/: ci.yml
examples/: demons.toml
scripts/: set-version.sh
src/: capture.rs  cli.rs  codex_config.rs  config.rs  control.rs  init.rs  layout.rs  main.rs  mcp_server.rs  runtime.rs  watch.rs
tests/: cli.rs
tests/fixtures/: smoke.toml
