[package]
name = "demons"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Run a project's development commands side-by-side in one terminal"
license = "Apache-2.0"
readme = "README.md"
exclude = ["test-demons.toml", "test_commands.sh"]
documentation = "https://docs.rs/demons"
repository = "https://github.com/jmicko/demons"
homepage = "https://github.com/jmicko/demons"
keywords = ["cli", "development", "process", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
libc = "0.2"
portable-pty = "0.9"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3"
toml = "0.8"
vt100 = "0.15"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
lto = "thin"
strip = true
